--- a/Stock/index.html
+++ b/Stock/index.html
@@ -57,34 +57,36 @@
                         <div class="general-row"><strong>Symbole</strong> : <span id="symbol-info"></span></div>
                         <div class="general-row card-country-row"><strong>Pays</strong> : <span class="country-name"></span><img id="" data-country="" src="" alt="" class="flag-icon"/></div>
                     </div>
-                    <h3 class="section-title investment-title">Investissement personnel</h3>
-                    <div class="section-date"></div>
-                    <div class="card-table-container">
-                        <div class="general-row important-shares">Actions détenues : <span id=""></span></div>
-                        <table class="card-table">
-                            <thead class="card-table-header">
-                                <tr>
-                                    <th class="card-table-th"></th>
-                                    <th class="card-table-th">Investi</th>
-                                    <th class="card-table-th">Valeur actuelle</th>
-                                    <th class="card-table-th">Bénéfice/Déficit</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td class="card-table-td card-table-type">Total</td>
-                                    <td class="card-table-td" id=""></td>
-                                    <td class="card-table-td" id=""></td>
-                                    <td class="card-table-td" id=""></td>
-                                </tr>
-                                <tr>
-                                    <td class="card-table-td card-table-type">Par action</td>
-                                    <td class="card-table-td" id=""></td>
-                                    <td class="card-table-td" id=""></td>
-                                    <td class="card-table-td" id=""></td>
-                                </tr>
-                            </tbody>
-                        </table>
+                    <div class="investment-section">
+                        <h3 class="section-title investment-title">Investissement personnel</h3>
+                        <div class="section-date"></div>
+                        <div class="card-table-container">
+                            <div class="general-row important-shares">Actions détenues : <span id=""></span></div>
+                            <table class="card-table">
+                                <thead class="card-table-header">
+                                    <tr>
+                                        <th class="card-table-th"></th>
+                                        <th class="card-table-th">Investi</th>
+                                        <th class="card-table-th">Valeur actuelle</th>
+                                        <th class="card-table-th">Bénéfice/Déficit</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="card-table-td card-table-type">Total</td>
+                                        <td class="card-table-td" id=""></td>
+                                        <td class="card-table-td" id=""></td>
+                                        <td class="card-table-td" id=""></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="card-table-td card-table-type">Par action</td>
+                                        <td class="card-table-td" id=""></td>
+                                        <td class="card-table-td" id=""></td>
+                                        <td class="card-table-td" id=""></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                     <h3 class="section-title course-title">Cours de l'action</h3>
                     <div class="section-date"></div>
@@ -105,6 +107,7 @@
                         <div class="performance-label">Performance</div>
                         <div class="performance-value" id=""></div>
                     </div>
+                    <div class="update-center" id=""></div>
                     <h3 class="section-title details-title">Details</h3>
                     <div class="section-date"></div>
                     <div class="info-grid">
@@ -125,7 +128,6 @@
                             <div class="info-value" id=""></div>
                         </div>
                     </div>
-                    <div class="update-center" id=""></div>
                     <h3 class="section-title transaction-history-title">Historique des transactions</h3>
                     <div class="transaction-history-container">
                         <table class="transaction-history-table">
