--- a/Stock/index.html
+++ b/Stock/index.html
@@ -16,6 +16,7 @@
                     <h1>Mr Léo TOSKU</h1>
                     <p>Total actions possédées: <span id="total-shares">0</span></p>
                     <p>Investissement total: <span id="total-investment">-- €</span></p>
+                    <p>Compte titre: <span id="cash-account">-- €</span></p>
                 </div>
             </div>
             <h3 class="sidebar-section-title">Mon Portefeuille</h3>
