--- a/Stock/index.html
+++ b/Stock/index.html
@@ -146,7 +146,7 @@
                         <div class="signal-state-container">
                             <div class="signal-state-title">Garder</div>
                             <div class="signal-state-description">Position neutre - Attendre une meilleure opportunité</div>
-                            <div class="signal-explanation" style="display: none;">
+                            <div class="signal-explanation hidden-by-bot">
                                 <div class="explanation-title">Pourquoi cette position ?</div>
                                 <div class="explanation-content">
                                     <p><strong>Analyse technique équilibrée</strong> : Aucun indicateur ne domine clairement.</p>
