--- a/BMGE/Reloaded/index.html
+++ b/BMGE/Reloaded/index.html
@@ -22,6 +22,22 @@
         <input id="file-input" type="file" accept=".bmg" hidden>
         <span id="file-label">No file selected</span>
       </div>
+      <div id="game-config-loader" class="game-config-loader">
+        <div class="game-config-bg"></div>
+        <div class="game-config-content">
+          <div class="game-config-dropdown">
+            <div style="display: flex; flex-direction: column; gap: 0.3em; width: max-content;">
+              <label for="game-config-select" class="game-config-label">Game config:</label>
+              <div class="game-config-select-wrapper">
+                <select id="game-config-select" class="game-config-select">
+                  <option value="tomodachicollection" data-icon="game/tomodachicollection/tomodachicollection.png">Tomodachi Collection</option>
+                </select>
+                <img id="game-config-icon" src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='48' height='48' viewBox='0 0 24 24'><rect fill='%23F4C542' rx='4' width='24' height='24'></rect><path fill='%23000' d='M7 7h2v2H7zM7 11h2v2H7zM17 7h-2v2h2zM17 11h-2v2h2z'/></svg>" alt="Tomodachi Collection" class="gamepad-icon" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div id="file-warning"></div>
       <div class="meta" id="file-meta"></div>
       <div class="search-container">
@@ -37,10 +53,7 @@
             <input type="checkbox" id="filter-single" checked>
             <span>Single Entries</span>
           </label>
-          <label class="filter-checkbox">
-            <input type="checkbox" id="filter-sequenced" checked>
-            <span>Sequenced Entries</span>
-          </label>
+          <!-- Sequenced entries filter removed (no longer needed) -->
           <label class="filter-checkbox">
             <input type="checkbox" id="filter-modified" checked>
             <span>Show Modified</span>
