--- a/YnovTeamRes/TP/TP2/index.html
+++ b/YnovTeamRes/TP/TP2/index.html
@@ -10,17 +10,17 @@
 
 <div class="container-fluid m-5">
     <div class="row mh-100">
-        <div class="col bg-warning">
-            <h1>1/4</h1>
+        <div class="col bg-warning pt-5">
+            1/4
         </div>
         <div class="col bg-primary">
-            <h1>2/4</h1>
+            2/4
         </div>
         <div class="col bg-info">
-            <h1>3/4</h1>
+            3/4
         </div>
         <div class="col bg-success">
-            <h1>4/4</h1>
+            4/4
         </div>
     </div>
 
