--- a/BMGE/Reloaded/index.html
+++ b/BMGE/Reloaded/index.html
@@ -30,9 +30,10 @@
               <label for="game-config-select" class="game-config-label">Game config:</label>
               <div class="game-config-select-wrapper">
                 <select id="game-config-select" class="game-config-select">
-                  <option value="tomodachicollection" data-icon="game/tomodachicollection/tomodachicollection.png">Tomodachi Collection</option>
+                  <option value="tomodachicollection">Tomodachi Collection</option>
+                  <!-- <option value="newsupermariobros">New Super Mario Bros.</option> -->
                 </select>
-                <img id="game-config-icon" src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='48' height='48' viewBox='0 0 24 24'><rect fill='%23F4C542' rx='4' width='24' height='24'></rect><path fill='%23000' d='M7 7h2v2H7zM7 11h2v2H7zM17 7h-2v2h2zM17 11h-2v2h2z'/></svg>" alt="Tomodachi Collection" class="gamepad-icon" />
+                <img id="game-config-icon" class="game-icon" alt="" />
               </div>
             </div>
           </div>
