--- a/YnovTeamRes/TP/TP2/index.html
+++ b/YnovTeamRes/TP/TP2/index.html
@@ -8,24 +8,23 @@
 </head>
 <body>
 
-<div class="container-fluid m-5">
-    <div class="row mh-100">
-        <div class="col bg-warning pt-5">
-            1/4
-        </div>
-        <div class="col bg-primary">
-            2/4
-        </div>
-        <div class="col bg-info">
-            3/4
-        </div>
-        <div class="col bg-success">
-            4/4
-        </div>
-    </div>
-
-
-</div>
+<table class="outline table table-striped">
+    <tr class="bg-primary text-white">
+        <td>Jean bernard</td>
+        <td class="bg-danger">kounyamaman'w</td>
+        <td>Paulus</td>
+    </tr>
+    <tr>
+        <td>Aberto</td>
+        <td>Albertine</td>
+        <td class="bg-danger text-white">Tabarnack</td>
+    </tr>
+    <tr>
+        <td>Vucic</td>
+        <td>Edi Rama</td>
+        <td>Lecornu</td>
+    </tr>
+</table>
 
 
 <!-- JavaScript-->
