--- a/YnovTeamRes/TP/TP2/index.html
+++ b/YnovTeamRes/TP/TP2/index.html
@@ -1,36 +1,142 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
+<!doctype html>
+<html lang="fr">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Ressources - Trello style</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
+    <link href="style.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="background-container">
+        <div class="shape shape-1"></div>
+        <div class="shape shape-2"></div>
+        <div class="shape shape-3"></div>
+    </div>
+    
+    <div class="page-wrapper">
+        <nav id="poles-nav" class="poles-nav">
+            <!-- Pole buttons will be populated here -->
+        </nav>
 
-<table class="outline table table-striped">
-    <tr class="bg-primary text-white">
-        <td>Jean bernard</td>
-        <td class="bg-danger">kounyamaman'w</td>
-        <td>Paulus</td>
-    </tr>
-    <tr>
-        <td>Aberto</td>
-        <td>Albertine</td>
-        <td class="bg-danger text-white">Tabarnack</td>
-    </tr>
-    <tr>
-        <td>Vucic</td>
-        <td>Edi Rama</td>
-        <td>Lecornu</td>
-    </tr>
-</table>
+        <div class="content-wrapper">
+            <header class="mt-3 mb-2">
+              <div class="d-flex align-items-center">
+                <div class="d-flex gap-2 ms-auto">
+                  <button id="importBtn" class="btn btn-outline-secondary btn-sm"><i class="fa-solid fa-file-import"></i> Importer JSON</button>
+                  <button id="exportBtn" class="btn btn-outline-secondary btn-sm"><i class="fa-solid fa-file-export"></i> Exporter JSON</button>
+                  <button id="clearBtn" class="btn btn-outline-danger btn-sm"><i class="fa-solid fa-trash"></i> Réinitialiser</button>
+                </div>
+              </div>
+            </header>
 
+            <main class="mt-3">
+              <section id="mainContent" class="flex-fill">
+                <div class="d-flex align-items-center mb-2">
+                  <h4 id="selectedPoleName" class="me-auto">Sélectionnez un pôle</h4>
+                  <small id="selectedCount" class="text-muted"></small>
+                </div>
+                <div id="lists" class="lists d-flex gap-3">
+                  <!-- Status columns: TODO -> DOING -> DONE -->
+                  <div class="list-col" data-status="todo">
+                    <div class="list-header">À faire</div>
+                    <div class="list-body" id="todo-list" ondragover="event.preventDefault()" ondrop="drop(event)"></div>
+                  </div>
+                  <div class="list-col" data-status="doing">
+                    <div class="list-header">En cours</div>
+                    <div class="list-body" id="doing-list" ondragover="event.preventDefault()" ondrop="drop(event)"></div>
+                  </div>
+                  <div class="list-col" data-status="done">
+                    <div class="list-header">Terminé</div>
+                    <div class="list-body" id="done-list" ondragover="event.preventDefault()" ondrop="drop(event)"></div>
+                  </div>
+                </div>
+              </section>
+            </main>
+        </div>
+        <img src="image/ydays.png" alt="YDays Logo" class="ydays-logo">
+    </div>
 
-<!-- JavaScript-->
-<script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js">
-</script>
+    <!-- Modal for add -->
+    <div class="modal futuristic-modal" id="taskModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalTitle">Ajouter une ressource</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form id="taskForm" class="modal-body futuristic-form" novalidate>
+                    <div class="form-group">
+                        <label for="taskTitle" class="form-label">Titre</label>
+                        <input id="taskTitle" type="text" class="form-control" placeholder="Titre..." />
+                    </div>
+                    <div class="form-group">
+                        <label for="taskDesc" class="form-label">Description</label>
+                        <textarea id="taskDesc" class="form-control" rows="3" placeholder="Résumé ou notes..."></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Assignés</label>
+                        <div id="taskAssigneesContainer" class="assignees-container">
+                            <!-- Assignee list will be populated by JavaScript -->
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="taskDueDate" class="form-label">Date limite</label>
+                        <input id="taskDueDate" type="date" class="form-control" />
+                    </div>
+                    <div class="form-group form-group-inline">
+                        <label class="form-label">Fichiers</label>
+                        <label class="file-chooser btn" for="taskFilesInput"><i class="fa-solid fa-file-arrow-up"></i> Choisir</label>
+                        <div id="taskFilesList" class="small text-muted"></div>
+                        <input id="taskFilesInput" type="file" class="form-control d-none" multiple />
+                    </div>
+                </form>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+                    <button id="taskSave" type="button" class="btn btn-primary">Enregistrer</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
-</body>
+    <!-- View modal for task details -->
+    <div class="modal modal-view" id="viewModal" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <div>
+              <h5 class="modal-title" id="viewModalTitle">Détails de la ressource</h5>
+              <small id="viewList" class="small text-muted d-block">&nbsp;</small>
+            </div>
+            <div class="ms-auto d-flex align-items-center">
+                <div class="dropdown">
+                  <button class="btn btn-sm btn-icon" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                  </button>
+                  <ul class="dropdown-menu dropdown-menu-end">
+                    <li><a class="dropdown-item" id="taskEdit" href="#">Modifier</a></li>
+                    <li><a class="dropdown-item text-danger" id="taskDelete" href="#">Supprimer</a></li>
+                  </ul>
+                </div>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+          </div>
+          <div class="modal-body">
+            <div id="viewList" class="small text-muted mb-1"></div>
+            <div id="viewAssignees" class="mb-2"></div>
+            <p id="viewDesc" class="mb-0 mb-2"></p>
+            <div class="small text-muted mb-2" id="viewDueDate"></div>
+            <div id="viewFiles" class="mb-1"></div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="app.js"></script>
+  </body>
 </html>
